upload the upload.py

--- a/practice.ipynb
+++ b/practice.ipynb
@@ -144,35 +144,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Begin Downloading Bucket: Examples ...\n",
-      "Finish Downloading Bucket: Examples.\n",
-      "Begin Zipping Bucket: Examples ...\n",
-      "Finish Zipping Bucket: Examples.\n",
-      "Begin Downloading Bucket: Cloud-automation ...\n",
-      "Finish Downloading Bucket: Cloud-automation.\n",
-      "Begin Zipping Bucket: Cloud-automation ...\n",
-      "Finish Zipping Bucket: Cloud-automation.\n",
-      "Begin Downloading Bucket: Addons ...\n",
-      "Finish Downloading Bucket: Addons.\n",
-      "Begin Zipping Bucket: Addons ...\n",
-      "Finish Zipping Bucket: Addons.\n",
-      "Migration Finished ...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#############################\n",
-    "#ProActive Catalog Migration#\n",
-    "#############################\n",
+    "######################################\n",
+    "#ProActive Catalog Migration Download#\n",
+    "######################################\n",
     "\n",
     "import os\n",
     "import sys\n",
@@ -182,12 +162,11 @@
     "import zipfile\n",
     "import urllib.request as ur\n",
     "\n",
-    "def downloadWFs(bucket, path):\n",
-    "    path = path + \"/catalog\"\n",
+    "def downloadWFs(bucket):\n",
     "    bucketURL = bucket + \"/workflows/\"\n",
     "    meta = json.load(ur.urlopen(bucket))\n",
     "    name = meta.get(\"name\")\n",
-    "    mypath = path+\"/\"+name\n",
+    "    mypath = \"./\"+name\n",
     "    if not os.path.isdir(mypath):\n",
     "        os.makedirs(mypath)\n",
     "    metaWorkflow = json.load(ur.urlopen(bucketURL))\n",
@@ -205,13 +184,13 @@
     "        f.close()\n",
     "    print(\"Finish Downloading Bucket: \"+name+\".\")\n",
     "\n",
-    "def zipBucket(bucket, path):\n",
-    "    path = path + \"/catalog\"\n",
+    "def zipBucket(bucket):\n",
     "    bucketURL = bucket + \"/workflows/\"\n",
     "    meta = json.load(ur.urlopen(bucket))\n",
     "    name = meta.get(\"name\")\n",
-    "    mypath = path+\"/\"+name\n",
-    "    zipf = zipfile.ZipFile(mypath+\".zip\", 'w', zipfile.ZIP_DEFLATED)\n",
+    "    mypath = \"./\"+name\n",
+    "    myname = mypath + \".zip\"\n",
+    "    zipf = zipfile.ZipFile(myname, 'w', zipfile.ZIP_DEFLATED)\n",
     "    print(\"Begin Zipping Bucket: \" +name+\" ...\")\n",
     "    for root, dirs, files in os.walk(mypath):\n",
     "        for file in files:\n",
@@ -220,8 +199,14 @@
     "    \n",
     "    if os.path.exists(mypath):\n",
     "        shutil.rmtree(mypath)\n",
+    "    \n",
+    "    return os.path.abspath(myname)\n",
     "\n",
     "def migration(catalogURL, path):\n",
+    "    if path == \"./\":\n",
+    "        path = os.path.abspath(os.curdir) + \"/CatalogWorkflows\"\n",
+    "    else:\n",
+    "        path = path + \"/CatalogWorkflows\"\n",
     "    if not os.path.isdir(path):\n",
     "        os.makedirs(path)    \n",
     "    bucketsURL = catalogURL+\"/buckets\"\n",
@@ -229,13 +214,16 @@
     "    bucketList = metaBucket.get(\"_embedded\").get(\"bucketMetadataList\")\n",
     "    for l in bucketList:\n",
     "        bucket = bucketsURL+\"/\"+str(l.get(\"id\"))\n",
-    "        downloadWFs(bucket, path)\n",
-    "        zipBucket(bucket, path)\n",
+    "        downloadWFs(bucket)\n",
+    "        name = zipBucket(bucket)\n",
+    "        shutil.move(name, path+\"/\"+name.split('/')[-1])\n",
     "    print(\"Migration Finished ...\")\n",
     "    \n",
+    "    \n",
     "if __name__ == \"__main__\":    \n",
-    "    catalogURL = \"http://try.activeeon.com:8080/workflow-catalog\"\n",
+    "    catalogURL = \"http://tryqa.activeeon.com:8080/workflow-catalog\"\n",
     "    path = \"/Users/sophiesong/Desktop\"\n",
+    "    #path = \"./\"\n",
     "    migration(catalogURL, path)"
    ]
   },
@@ -243,10 +231,120 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "name = \"/Users/sophiesong/Documents/workspace/activeeon/Examples.zip\"\n",
+    "print(name.split('/')[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1007\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import json\n",
+    "import urllib.request as ur\n",
+    "import zipfile\n",
+    "import shutil\n",
+    "\n",
+    "bucket = \"https://tryqa.activeeon.com/catalog/buckets\"\n",
+    "meta = json.load(ur.urlopen(bucket))\n",
+    "print(meta[-1].get('id'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "####################################\n",
+    "#ProActive Catalog Migration Upload#\n",
+    "####################################\n",
+    "\n",
+    "import os\n",
+    "import sys\n",
+    "import json\n",
+    "import getopt\n",
+    "import requests\n",
+    "import urllib.request as ur\n",
+    "\n",
+    "#####Walk through a directory and Create a bucket for each zip file, then upload this zip to the new created bucket######\n",
+    "\n",
+    "#rootDir = '/Users/sophiesong/Desktop/CatalogWorkflows/'\n",
+    "#newCatalog = 'https://tryqa.activeeon.com/catalog/'\n",
+    "def upload(rootDir, newCatalog):    \n",
+    "    buckets = newCatalog + 'buckets/'\n",
+    "    bucketURL = buckets+'?name='\n",
+    "    list_dirs = os.walk(rootDir)\n",
+    "    for root, dirs, files in list_dirs:\n",
+    "        for f in files:\n",
+    "            zipName = os.path.join(root, f).split('/')[-1]\n",
+    "            if(zipName.split('.')[-1] == 'zip'):\n",
+    "                bucketName =  zipName.split('.')[0]+'_0'\n",
+    "                response = requests.post(bucketURL+bucketName)\n",
+    "                meta = json.load(ur.urlopen(buckets))\n",
+    "                bucketID = meta[-1].get('id')\n",
+    "                #print(meta[-1].get('id'))\n",
+    "                url = buckets+str(bucketID)+'/resources?kind=workflow&commitMessage=migration&contentType=zip'\n",
+    "                files = {'file': open(rootDir + zipName, 'rb')}\n",
+    "                r = requests.post(url, files=files)\n",
+    "        \n",
+    "\n",
+    "if __name__ == \"__main__\":    \n",
+    "    rootDir = '/Users/sophiesong/Desktop/CatalogWorkflows/'\n",
+    "    newCatalog = 'https://tryqa.activeeon.com/catalog/'\n",
+    "    upload(rootDir, newCatalog)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import requests\n",
+    "\n",
+    "########Create a new bucket#########\n",
+    "\n",
+    "url = \"https://tryqa.activeeon.com/catalog/buckets?name=\"\n",
+    "\n",
+    "response = requests.post(url+\"test\")\n",
+    "\n",
+    "\n",
+    "#curl -X GET --header 'Accept: */*' 'https://trydev.activeeon.com/catalog/buckets?name=Example'\n",
+    "#https://trydev.activeeon.com/catalog/buckets?name=test&owner=GROUP%3Apublic-objects\n",
+    "#curl -X POST --header 'Content-Type: application/json' --header 'Accept: */*' 'https://trydev.activeeon.com:8080/catalog/buckets?name=test&owner=GROUP%3Apublic-objects'\n",
+    "\n",
+    "\n",
+    "\n",
+    "########Upload an archive to a bucket#########\n",
+    "\n",
+    "# curl -X POST --header 'Content-Type: multipart/form-data' --header 'Accept: application/json' 'http://tryqa.activeeon.com:8080/catalog/buckets/1010/resources?kind=workflow&commitMessage=migration&contentType=zip' -F \"file=@/Users/sophiesong/Desktop/CatalogWorkflows/Addons.zip\"\n",
+    "\n",
+    "\n",
+    "url = 'http://tryqa.activeeon.com:8080/catalog/buckets/1010/resources?kind=workflow&commitMessage=migration&contentType=zip'\n",
+    "files = {'file': open('/Users/sophiesong/Desktop/CatalogWorkflows/Machine_Learning.zip', 'rb')}\n",
+    "r = requests.post(url, files=files)"
+   ]
   }
  ],
  "metadata": {
